Sun Feb 11 19:28:50 GMT 2007  Olly Betts <olly@survex.com>

	* languages/api.h,languages/header.h: Remove headers which are no
	  longer used.

Sun Feb 11 19:26:50 GMT 2007  Olly Betts <olly@survex.com>

	* languages/api.cc,languages/utilities.cc: Remove sources which are
	  no longer used.

Sun Feb 11 16:22:16 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/driver.c: Use #ifdef instead of #if.

Sun Feb 11 16:20:44 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/driver.c: Disable java support, since we don't
	  use it and it means one less source file.

Sun Feb 11 16:08:49 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/analyser.c,languages/compiler/header.h: Use qsort
	  instead the snowball's own sort implementation to reduce the number
	  of source files we need for the snowball compiler.

Sun Feb 11 16:04:19 GMT 2007  Olly Betts <olly@survex.com>

	* languages/Makefile: Add stub Makefile to allow "make", "make check",
	  and "make clean" from the languages subdirectory.

Sun Feb 11 16:00:51 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/analyser.c: Cast the arguments, not the function
	  pointer as ISO C allows `void*' and `struct amongvec*' to have
	  different representations.

Sun Feb 11 15:43:49 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/space.c: Fix a typo of a function name in a
	  comment.

Sun Feb 11 15:23:51 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/header.h,languages/compiler/tokeniser.c: Give
	  syswords and syswords2 .h extensions for clarity.

Sun Feb 11 15:17:28 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,api/Makefile.am,api/omstem.cc,configure.ac,dummy.cc,
	  languages/Makefile.am,languages/Makefile.mk,languages/compiler/,
	  languages/: Update the stemmers to use utf-8 and the latest snowball
	  version (based on r421 from snowball SVN).  Further patches are
	  required to generate C++ classes from snowball, I'm checking in the