@@ -45,11 +45,6 @@ extern int str_len(struct str * str);
 extern int get_utf8(const symbol * p, int * slot);
 extern int put_utf8(int ch, symbol * p);
 
-/* Use qsort instead of custom implementation of mergesort to reduce the
- * dependencies.  The mergesort isn't detectably faster anyway.
- */
-/* extern void sort(void * p, void * p_end, int unit, int (*f)(void *, void *)); */
-
 struct m_pair {
 
     struct m_pair * next;
