@@ -1,3 +1,8 @@
+Mon Feb 12 01:08:50 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* languages/compiler/header.h: Remove commented out header for
+	  sort() prototype, to match snowball sources.
+
 Sun Feb 11 19:28:50 GMT 2007  Olly Betts <olly@survex.com>
 
 	* languages/api.h,languages/header.h: Remove headers which are no
